# agentmesh

./: .gitignore  .prettierignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  dprint.json  package-lock.json  package.json  release-please-config.json
.github/workflows/: ci.yml  release.yml  sync-install-scripts.yml
adapters/claude/: Cargo.toml
adapters/claude/src/: hooks.rs  lib.rs
adapters/codex/: Cargo.toml
adapters/codex/src/: hooks.rs  lib.rs
crates/agentmesh/: Cargo.toml
crates/agentmesh-adapter-sdk-rust/: Cargo.toml
crates/agentmesh-adapter-sdk-rust/src/: frontmatter.rs  lib.rs
crates/agentmesh-cli/: Cargo.toml
crates/agentmesh-cli/src/: main.rs
crates/agentmesh-cli/src/snapshots/: agentmesh__tests__command_help_surface.snap
crates/agentmesh-cli/tests/: cli_flows.rs
crates/agentmesh-cli/tests/snapshots/: cli_flows__representative_command_outputs.snap
crates/agentmesh-core/: Cargo.toml
crates/agentmesh-core/benches/: full_sync_bench.rs  hook_hot_path_bench.rs  lockfile_bench.rs  merge_bench.rs
crates/agentmesh-core/src/: config.rs  drainer.rs  identity.rs  lib.rs  lockfile.rs  merge.rs  mutex.rs  pending_queue.rs  pipeline.rs  state.rs  types.rs
crates/agentmesh-core/src/pipeline/: doctor.rs
crates/agentmesh-core/src/schemas/: agentmesh.config.schema.json
crates/agentmesh-core/tests/: performance_budgets.rs
crates/agentmesh-protocol/: Cargo.toml
crates/agentmesh-protocol/src/: lib.rs
crates/agentmesh-watcher/: Cargo.toml
crates/agentmesh-watcher/src/: lib.rs  service.rs
crates/agentmesh/src/: hooks.rs  inspect.rs  main.rs
crates/agentmesh/src/snapshots/: agentmesh__tests__command_help_surface.snap
crates/agentmesh/tests/: cli_flows.rs
crates/agentmesh/tests/snapshots/: cli_flows__representative_command_outputs.snap
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frontmatter_parse.rs  json_rpc_framing.rs  lockfile_parse.rs
installers/: README.md  install.ps1  install.sh
installers/homebrew-formula/: agentmesh.rb
installers/npm/: README.md  package.json
installers/npm/scripts/: install.js
installers/pip/: README.md  pyproject.toml
installers/pip/agentmesh_wrapper/: __init__.py
scripts/: bump-release-version.sh
website/: adapters.html  check-render.cjs  check-static.py  commands.html  concepts.html  index.html  migration.html  security.html  styles.css
