[package]
name = "agentmesh-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
agentmesh-core = { path = "../crates/agentmesh-core" }
libfuzzer-sys = "0.4"
serde_yml = "0.0.12"

[[bin]]
name = "lockfile_parse"
path = "fuzz_targets/lockfile_parse.rs"
test = false
doc = false
bench = false
