[package]
name = "agentmesh-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
resolver = "3"

[dependencies]
agentmesh-adapter-sdk-rust = { path = "../crates/agentmesh-adapter-sdk-rust", version = "0.1.0" }
agentmesh-core = { path = "../crates/agentmesh-core", version = "0.1.0" }
agentmesh-protocol = { path = "../crates/agentmesh-protocol", version = "0.1.0" }
libfuzzer-sys = "0.4"
serde_norway = "0.9.42"

[[bin]]
name = "lockfile_parse"
path = "fuzz_targets/lockfile_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_rpc_framing"
path = "fuzz_targets/json_rpc_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frontmatter_parse"
path = "fuzz_targets/frontmatter_parse.rs"
test = false
doc = false
bench = false
