[package]
name = "agentmesh-adapter-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentmesh-adapter-sdk-rust.workspace = true
agentmesh-protocol.workspace = true

[lints]
workspace = true
