[package]
name = "agentmesh-adapter-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentmesh-adapter-sdk-rust.workspace = true
agentmesh-protocol.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
