[package]
name = "agentmesh-adapter-sdk-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentmesh-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror.workspace = true

[lints]
workspace = true
