[package]
name = "agentmesh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentmesh-protocol.workspace = true
blake3 = "1.8.5"
fs2 = "0.4.3"
jsonschema = "0.46.5"
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.11.0"
similar = "3.1.1"
tempfile = "3.27.0"
thiserror.workspace = true
toml.workspace = true
ulid = "1.2.1"

[dev-dependencies]
agentmesh-adapter-claude.workspace = true
agentmesh-adapter-codex.workspace = true
agentmesh-adapter-sdk-rust.workspace = true
criterion.workspace = true
insta.workspace = true
proptest.workspace = true

[[bench]]
name = "merge_bench"
harness = false

[[bench]]
name = "hook_hot_path_bench"
harness = false

[[bench]]
name = "full_sync_bench"
harness = false

[[bench]]
name = "lockfile_bench"
harness = false

[lints]
workspace = true
